force-app/main/default/objects/General__c/General__c.object-meta.xml
<CustomObject>
    <label>General</label>
    <nameField>
        <label>General Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Generals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>