force-app/main/default/objects/General__c/fields/AttackingSiegeMachine__c.field-meta.xml
<CustomField>
    <fullName>AttackingSiegeMachine__c</fullName>
    <label>Attacking Siege Machine</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>