force-app/main/default/objects/General__c/fields/GroundTroopAttack__c.field-meta.xml
<CustomField>
    <fullName>GroundTroopAttack__c</fullName>
    <label>Ground Troop Attack</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>