force-app/main/default/objects/General__c/fields/GroundTroopDefense__c.field-meta.xml
<CustomField>
    <fullName>GroundTroopDefense__c</fullName>
    <label>Ground Troop Defense</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>