force-app/main/default/objects/General__c/fields/MarchSizeCapacity__c.field-meta.xml
<CustomField>
    <fullName>MarchSizeCapacity__c</fullName>
    <label>March Size Capacity</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>